# ShivamDB

./: CMakeLists.txt
cli/: main.cpp
include/shivamdb/: shivamdb.h  wal.h
src/: shivamdb.cpp  wal.cpp
tests/: test_shivamdb.cpp
